--- a/k8s-manifests/base/secrets.yaml
+++ b/k8s-manifests/base/secrets.yaml
@@ -7,6 +7,6 @@ stringData:
   INFLUXDB_ADMIN_PASSWORD: fe2wf4yyuh
   INFLUXDB_ADMIN_USER: admin
   INFLUXDB_CONFIG_PATH: /etc/influxdb/influxdb.conf
-  INFLUXDB_USER: user
-  INFLUXDB_USER_PASSWORD: fji9o3nfs
+  INFLUXDB_USERNAME: user
+  INFLUXDB_PASSWORD: fji9o3nfs
 type: Opaque
