--- a/k8s-manifests/overlays/dev/secrets.yaml
+++ b/k8s-manifests/overlays/dev/secrets.yaml
@@ -4,6 +4,6 @@ metadata:
   name: influxdb-secrets
   namespace: devops-test-rod
 stringData:
-  INFLUXDB_USER: devuser
-  INFLUXDB_USER_PASSWORD: nmuji8fbuvdg
+  INFLUXDB_USERNAME: devuser
+  INFLUXDB_PASSWORD: nmuji8fbuvdg
 type: Opaque
