--- a/k8s-manifests/overlays/qa/secrets.yaml
+++ b/k8s-manifests/overlays/qa/secrets.yaml
@@ -4,6 +4,6 @@ metadata:
   name: influxdb-secrets
   namespace: devops-test-rod
 stringData:
-  INFLUXDB_USER: qauser
-  INFLUXDB_USER_PASSWORD: shg4jadfh54
+  INFLUXDB_USERNAME: qauser
+  INFLUXDB_PASSWORD: shg4jadfh54
 type: Opaque
