--- a/k8s-manifests/base/deployment.yaml
+++ b/k8s-manifests/base/deployment.yaml
@@ -109,6 +109,8 @@ spec:
                 secretKeyRef:
                   name: influxdb-secrets
                   key: INFLUXDB_PASSWORD
+            - name: INFLUXDB_URL
+              value: http://influxdb:8086
       hostname: influxdb
       restartPolicy: Always
       volumes:
